--- a/r/r_iris.html
+++ b/r/r_iris.html
@@ -141,7 +141,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="../index.html#aplicaciones-moviles"> 
-<span class="menu-text">Aplicaciones Web</span></a>
+<span class="menu-text">Aplicaciones móviles</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="../index.html#tableau"> 
