--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@ Apasionado por el entorno R, Python y Power BI.</span></p>
 <h1 style="text-align: center;">Python</h1>
 <div class="grid" style="text-align: center; font-family:Courier New ">
 <div class="g-col-12">
-<p><a href="./p/p_regre.html" class="img-hover"><img src="img/p_clinica.png" height="400"></a></p>
-<p><a href="./p/p_regre.html"><strong>Predicción de gastos sanitarios</strong></a></p>
-<p><strong>Aplicación de modelos predictivos de gastos sanitarios en Python sobre el dataset Insurance, evaluando diversos algoritmos con PyCaret y eligiendo el más eficiente para predecir gastos sanitarios.</strong></p>
+<p><a href="./p/p_web_regre/p_regre_onnx.html" class="img-hover"><img src="img/p_clinica.png" height="400"></a></p>
+<p><a href="./p/p_web_regre/p_regre_onnx.html"><strong>Predicción de Cargos de Seguros</strong></a></p>
+<p><strong>Aplicación de modelos predictivos frecuentistas y bayesianos para predecir los cargos de seguro en Python sobre el dataset Insurance, evaluando diversos algoritmos con la libreria Scikit-learn y eligiendo el más eficiente para predecir gastos sanitarios. Tambien una app web para predecir los cargos.</strong></p>
 <p><br><br></p>
 <p><a href="./p/p_clasi_sklearn.html" class="img-hover"><img src="img/p_banco.png" class="img-fluid" width="500"></a></p>
 <p><a href="./p/p_clasi_sklearn.html"><strong>Clasificación de depósito al banco</strong></a></p>
@@ -288,7 +288,7 @@ Apasionado por el entorno R, Python y Power BI.</span></p>
 <p><br><br></p>
 <section id="section" class="level6">
 <h6 class="anchored" data-anchor-id="section"></h6>
-<p><a href="./pb/pb_sap.html" class="img-hover"><img src="img/sap_pb_dashboard.png" height="400"></a></p>
+<p><a href="./pb/pb_sap.html" class="img-hover"><img src="img/sap_dashboard.png" height="400"></a></p>
 <p><a href="./pb/pb_sap.html"><strong>Power BI – SAP BO</strong></a></p>
 <p><strong>Conexión de Power BI y SAP Business One: Dashboard de un Database de SAP BO, utilizando Power BI para generar visualizaciones interactivas.</strong></p>
 <p><br><br></p>
