--- a/p/p_ts.html
+++ b/p/p_ts.html
@@ -141,7 +141,15 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="../index.html#aplicaciones-moviles"> 
-<span class="menu-text">Aplicaciones Móviles</span></a>
+<span class="menu-text">Aplicaciones móviles</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="../index.html#tableau"> 
+<span class="menu-text">Tableau</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="../cv_cristian_heredia.pdf"> 
+<span class="menu-text">CV</span></a>
   </li>  
 </ul>
           </div> <!-- /navcollapse -->
