--- a/index.html
+++ b/index.html
@@ -762,6 +762,16 @@ Apasionado por el entorno R, Python y Power BI.</span></p>
   </script>
 </div> <!-- /content -->
 
+<!-- vercel -->
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  const msg = encodeURIComponent("Visita desde GitHub Pages");
+  fetch(`https://web-qimozi4cm-crecer1.vercel.app/api/sendTelegram?text=${msg}`)
+    .then(res => res.json())
+    .then(data => console.log("Mensaje enviado:", data))
+    .catch(err => console.error("Error:", err));
+});
+</script>
 
 
 
